#742: correct tests